Fixing rendering issue on mobile - added webkit prefix to background property

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -202,12 +202,12 @@ body {
       .home__text-box {
         margin: 2rem auto; } }
   .home-headline {
-    font-size: 2.5rem; }
+    font-size: 2.5rem;
+    background-color: orangered; }
     .home-headline--gradient {
-      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
+      background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-position-y: 4px; }
+      -webkit-text-fill-color: transparent; }
     @media (min-width: 56.25em) {
       .home-headline {
         font-size: 3.6rem;
@@ -416,7 +416,7 @@ body {
     font-weight: 700;
     margin-top: 1.5rem; }
   .empty-box__text--gradient {
-    background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
+    background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; }
   .empty-box__button {
@@ -458,7 +458,7 @@ body {
     animation-duration: .5s;
     animation-timing-function: ease-out; }
     .snoozed__text--heading {
-      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
+      background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 2.5rem;
