--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,12 +26,10 @@
     
     &-headline {
         font-size: 2.5rem;
+        background-color: orangered;
         
         &--gradient {
             @include gradient-text;
-            
-            background-position-y: 4px;
-    
         }
         
         @include for-tablet-landscape-up {
